--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "prisma": "^5.22.0",
+    "resend": "^6.9.2",
     "socket.io": "^4.8.3",
     "tsx": "^4.21.0"
   },
